--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,10 @@
 <head>
     <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <style type=text/css>{{ get_resource_as_string('css/style.css') }}</style>
     <title>Twitter Clone</title>
 </head>
 <body>
-    <div>
-	{% if not login %}
-	<a href="/login">Log in</a>
-	{% else %}
-	<a href="/logoff">Log off</a>
-	{% endif %}
-    </div>
     <hr>
     <div class="container-fluid" style="min-height:100% width:80%">
     {% with messages = get_flashed_messages() %}
