--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div id="welcomebox">
 <div id="registerbox">
-  <h2>Register!</h2>
+  <h2>Register</h2>
   <form method="POST" action="">
     <table>
     <tr>
@@ -20,17 +20,14 @@
     <td colspan="2" align="right"><input type="submit" name="doit" value="Create an account"></td></tr>
     </table>
   </form>
-  <h1>Log In</h1>
+  <h2>Login</h2>
   <form action="" method="post" name="login">
+      <table>
       {{ form.csrf_token }}
-      <p>
-          
-          {{ form.username.label }}: {{ form.username(size=16) }}<br>
-	  {{ form.password.label}}: {{ form.password(size=16)}}<br>
-	
-      </p>
-      <p>{{ form.remember_me }} Remember Me</p>
-      <p><input type="submit" value="Log In"></p>
+      <tr><td>{{ form.username.label }}</td><td>{{ form.username(size=16) }}</td></tr>
+      <tr><td>{{ form.password.label }}</td><td>{{ form.password(size=16) }}</td></tr>
+      <tr><td colspan="2" align="right"><input type="submit" name="login" value="Log In"></td></tr>
+      </table>
   </form>
 </div>
 Hello! 
